X11: Fix transparency on certain windows

Transparency on arrow windows stopped working after CL [1].  This CL
is a one-line selective revert of that CL.  Note that transparency on
all other windows that I've tested (drag images, dragged URLs, etc)
were not broken.

[1] https://chromium.googlesource.com/chromium/src/+/5785866a9b2a0db4854552eb87af7229d4b11a43

BUG=758304
R=erg@chromium.org

Change-Id: I37020d930bd081facce65b0a8be0eeb2e1756c69
Reviewed-on: https://chromium-review.googlesource.com/629538
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Reviewed-by: Elliot Glaysher <erg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496775}